// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures – real catalogue > ACME Retail matches a non-empty set of active triggers 1`] = `
[
  "acc-schedule-iii",
  "audit-statutory",
  "clra-licence",
  "epfo-ecr",
  "epfo-international-workers",
  "epfo-joinee-exit",
  "epr-plastic",
  "esic-half-yearly",
  "esic-monthly",
  "fire-noc",
  "fssai-form-d1",
  "fssai-renewal",
  "fssai-state-licence",
  "gst-apob",
  "gst-asmt10",
  "gst-cmp08",
  "gst-einvoice",
  "gst-eway",
  "gst-gstr1",
  "gst-gstr1a",
  "gst-gstr3b",
  "gst-gstr4",
  "gst-gstr7",
  "gst-gstr9",
  "gst-gstr9c",
  "ip-opposition",
  "it-44ab-audit",
  "it-advance-tax",
  "it-books-sec44aa",
  "it-business-itr",
  "it-form-3ce",
  "it-notice-143",
  "it-sft",
  "labour-bonus",
  "labour-factory-licence",
  "labour-gratuity",
  "labour-lwf",
  "labour-min-wages",
  "labour-registers",
  "labour-shops-renewal",
  "law-change-watch",
  "lm-packaged",
  "lm-weights",
  "mca-adt1",
  "mca-agm",
  "mca-aoc4",
  "mca-aoc4-cfs",
  "mca-ben2",
  "mca-board-meetings",
  "mca-chg1",
  "mca-dir12",
  "mca-dir3-kyc",
  "mca-dpt3",
  "mca-inc20a",
  "mca-mgt7",
  "mca-msme1",
  "mca-pas3",
  "mca-sh7",
  "msme-45day",
  "municipal-health-noc",
  "municipal-signage",
  "municipal-trade-renewal",
  "posh-annual-report",
  "posh-ic",
  "pt-first-employee",
  "pt-monthly-return",
  "pt-ptrc",
  "rbi-apr",
  "rbi-fcgpr",
  "rbi-fla",
  "spcb-cte",
  "tds-24q",
  "tds-26q",
  "tds-deposit",
  "tds-form16",
  "tds-form16a",
]
`;

exports[`golden fixtures – real catalogue > produces golden match sets for all fixture entities 1`] = `
{
  "ent-acme": {
    "dues": {
      "acc-schedule-iii": "2027-03-31",
      "audit-statutory": "2026-09-30",
      "clra-licence": null,
      "epfo-ecr": "2026-09-15",
      "epfo-international-workers": "2026-09-15",
      "epfo-joinee-exit": null,
      "epr-plastic": "2027-06-30",
      "esic-half-yearly": "2026-11-11",
      "esic-monthly": "2026-09-15",
      "fire-noc": null,
      "fssai-form-d1": "2027-05-31",
      "fssai-renewal": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-einvoice": null,
      "gst-eway": null,
      "gst-gstr1": "2026-09-11",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-04-30",
      "gst-gstr7": "2026-09-10",
      "gst-gstr9": "2026-12-31",
      "gst-gstr9c": "2026-12-31",
      "ip-opposition": null,
      "it-44ab-audit": "2026-09-30",
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-business-itr": "2027-07-31",
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-bonus": "2026-11-30",
      "labour-factory-licence": null,
      "labour-gratuity": null,
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "lm-weights": null,
      "mca-adt1": null,
      "mca-agm": "2026-09-30",
      "mca-aoc4": "2027-03-30",
      "mca-aoc4-cfs": "2027-03-01",
      "mca-ben2": null,
      "mca-board-meetings": "2026-12-01",
      "mca-chg1": null,
      "mca-dir12": null,
      "mca-dir3-kyc": "2026-09-30",
      "mca-dpt3": "2027-06-30",
      "mca-inc20a": null,
      "mca-mgt7": "2027-03-01",
      "mca-msme1": "2026-10-30",
      "mca-pas3": null,
      "mca-sh7": null,
      "msme-45day": null,
      "municipal-health-noc": null,
      "municipal-signage": "2027-03-01",
      "municipal-trade-renewal": null,
      "posh-annual-report": "2027-01-31",
      "posh-ic": null,
      "pt-first-employee": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-apr": "2026-12-31",
      "rbi-fcgpr": null,
      "rbi-fla": "2027-07-15",
      "spcb-cte": null,
      "tds-24q": "2026-10-31",
      "tds-26q": "2026-10-31",
      "tds-deposit": "2026-10-07",
      "tds-form16": "2027-06-15",
      "tds-form16a": "2026-12-01",
    },
    "ids": [
      "acc-schedule-iii",
      "audit-statutory",
      "clra-licence",
      "epfo-ecr",
      "epfo-international-workers",
      "epfo-joinee-exit",
      "epr-plastic",
      "esic-half-yearly",
      "esic-monthly",
      "fire-noc",
      "fssai-form-d1",
      "fssai-renewal",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-einvoice",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr9",
      "gst-gstr9c",
      "ip-opposition",
      "it-44ab-audit",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-business-itr",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-bonus",
      "labour-factory-licence",
      "labour-gratuity",
      "labour-lwf",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-renewal",
      "law-change-watch",
      "lm-packaged",
      "lm-weights",
      "mca-adt1",
      "mca-agm",
      "mca-aoc4",
      "mca-aoc4-cfs",
      "mca-ben2",
      "mca-board-meetings",
      "mca-chg1",
      "mca-dir12",
      "mca-dir3-kyc",
      "mca-dpt3",
      "mca-inc20a",
      "mca-mgt7",
      "mca-msme1",
      "mca-pas3",
      "mca-sh7",
      "msme-45day",
      "municipal-health-noc",
      "municipal-signage",
      "municipal-trade-renewal",
      "posh-annual-report",
      "posh-ic",
      "pt-first-employee",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-apr",
      "rbi-fcgpr",
      "rbi-fla",
      "spcb-cte",
      "tds-24q",
      "tds-26q",
      "tds-deposit",
      "tds-form16",
      "tds-form16a",
    ],
  },
  "ent-brightpath": {
    "dues": {
      "acc-schedule-iii": "2027-03-31",
      "audit-statutory": "2026-09-30",
      "fire-noc": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-eway": null,
      "gst-gstr1": "2026-09-11",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-04-30",
      "gst-gstr7": "2026-09-10",
      "gst-qrpm-optin": "2027-04-30",
      "ip-opposition": null,
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-business-itr": "2027-07-31",
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "mca-adt1": null,
      "mca-agm": "2026-09-30",
      "mca-aoc4": "2027-03-30",
      "mca-aoc4-cfs": "2027-03-01",
      "mca-ben2": null,
      "mca-board-meetings": "2026-12-01",
      "mca-chg1": null,
      "mca-dir12": null,
      "mca-dir3-kyc": "2026-09-30",
      "mca-dpt3": "2027-06-30",
      "mca-inc20a": null,
      "mca-mgt7": "2027-03-01",
      "mca-msme1": "2026-10-30",
      "mca-pas3": null,
      "mca-sh7": null,
      "msme-45day": null,
      "msme-udyam": null,
      "municipal-trade-renewal": null,
      "pt-first-employee": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-apr": "2026-12-31",
      "rbi-fcgpr": null,
      "rbi-fla": "2027-07-15",
    },
    "ids": [
      "acc-schedule-iii",
      "audit-statutory",
      "fire-noc",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-qrpm-optin",
      "ip-opposition",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-business-itr",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-lwf",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-renewal",
      "law-change-watch",
      "mca-adt1",
      "mca-agm",
      "mca-aoc4",
      "mca-aoc4-cfs",
      "mca-ben2",
      "mca-board-meetings",
      "mca-chg1",
      "mca-dir12",
      "mca-dir3-kyc",
      "mca-dpt3",
      "mca-inc20a",
      "mca-mgt7",
      "mca-msme1",
      "mca-pas3",
      "mca-sh7",
      "msme-45day",
      "msme-udyam",
      "municipal-trade-renewal",
      "pt-first-employee",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-apr",
      "rbi-fcgpr",
      "rbi-fla",
    ],
  },
  "ent-nova": {
    "dues": {
      "esic-registration": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-eway": null,
      "gst-gstr1": "2026-09-11",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-04-30",
      "gst-gstr7": "2026-09-10",
      "gst-qrpm-optin": "2027-04-30",
      "ip-opposition": null,
      "it-44ab-audit": "2026-09-30",
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-business-itr": "2027-07-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-gratuity": null,
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "mca-dir3-kyc": "2026-09-30",
      "mca-llp-form11": "2027-05-30",
      "mca-llp-form8": "2026-10-30",
      "msme-45day": null,
      "msme-udyam": null,
      "municipal-trade-licence": null,
      "posh-annual-report": "2027-01-31",
      "posh-ic": null,
      "pt-first-employee": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-apr": "2026-12-31",
      "tds-15ca-cb": null,
      "tds-24q": "2026-10-31",
      "tds-26q": "2026-10-31",
      "tds-27q": "2026-10-31",
      "tds-deposit": "2026-10-07",
      "tds-form16": "2027-06-15",
      "tds-form16a": "2026-12-01",
    },
    "ids": [
      "esic-registration",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-qrpm-optin",
      "ip-opposition",
      "it-44ab-audit",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-business-itr",
      "it-notice-143",
      "it-sft",
      "labour-gratuity",
      "labour-lwf",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-renewal",
      "law-change-watch",
      "mca-dir3-kyc",
      "mca-llp-form11",
      "mca-llp-form8",
      "msme-45day",
      "msme-udyam",
      "municipal-trade-licence",
      "posh-annual-report",
      "posh-ic",
      "pt-first-employee",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-apr",
      "tds-15ca-cb",
      "tds-24q",
      "tds-26q",
      "tds-27q",
      "tds-deposit",
      "tds-form16",
      "tds-form16a",
    ],
  },
  "ent-pixel": {
    "dues": {
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-eway": null,
      "gst-gstr1": "2026-09-11",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-04-30",
      "gst-gstr7": "2026-09-10",
      "gst-qrpm-optin": "2027-04-30",
      "ip-opposition": null,
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-business-itr": "2027-07-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "msme-udyam": null,
      "municipal-trade-licence": null,
    },
    "ids": [
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-qrpm-optin",
      "ip-opposition",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-business-itr",
      "it-notice-143",
      "it-sft",
      "labour-lwf",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-renewal",
      "law-change-watch",
      "msme-udyam",
      "municipal-trade-licence",
    ],
  },
  "ent-spice": {
    "dues": {
      "clra-licence": null,
      "dgft-iec-update": "2027-06-30",
      "dgft-rcmc": null,
      "epfo-ecr": "2026-09-15",
      "epfo-international-workers": "2026-09-15",
      "epfo-joinee-exit": null,
      "epr-plastic": "2027-06-30",
      "esic-half-yearly": "2026-11-11",
      "esic-monthly": "2026-09-15",
      "fire-noc": null,
      "fssai-form-d1": "2027-05-31",
      "fssai-renewal": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-einvoice": null,
      "gst-eway": null,
      "gst-gstr1": "2026-09-11",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-04-30",
      "gst-gstr7": "2026-09-10",
      "gst-gstr9": "2026-12-31",
      "gst-gstr9c": "2026-12-31",
      "gst-itc04": "2026-10-25",
      "gst-lut": "2027-04-01",
      "ip-opposition": null,
      "it-44ab-audit": "2026-09-30",
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-business-itr": "2027-07-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-bonus": "2026-11-30",
      "labour-factory-licence": null,
      "labour-gratuity": null,
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-reg": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "municipal-trade-licence": null,
      "posh-annual-report": "2027-01-31",
      "posh-ic": null,
      "spcb-cto": null,
      "spcb-form-v": "2026-09-30",
      "spcb-hazwaste": null,
      "tds-15ca-cb": null,
      "tds-24q": "2026-10-31",
      "tds-26q": "2026-10-31",
      "tds-deposit": "2026-10-07",
      "tds-form16": "2027-06-15",
      "tds-form16a": "2026-12-01",
    },
    "ids": [
      "clra-licence",
      "dgft-iec-update",
      "dgft-rcmc",
      "epfo-ecr",
      "epfo-international-workers",
      "epfo-joinee-exit",
      "epr-plastic",
      "esic-half-yearly",
      "esic-monthly",
      "fire-noc",
      "fssai-form-d1",
      "fssai-renewal",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-einvoice",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr9",
      "gst-gstr9c",
      "gst-itc04",
      "gst-lut",
      "ip-opposition",
      "it-44ab-audit",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-business-itr",
      "it-notice-143",
      "it-sft",
      "labour-bonus",
      "labour-factory-licence",
      "labour-gratuity",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-reg",
      "law-change-watch",
      "lm-packaged",
      "municipal-trade-licence",
      "posh-annual-report",
      "posh-ic",
      "spcb-cto",
      "spcb-form-v",
      "spcb-hazwaste",
      "tds-15ca-cb",
      "tds-24q",
      "tds-26q",
      "tds-deposit",
      "tds-form16",
      "tds-form16a",
    ],
  },
}
`;
